# fantasy-console-prototype

./: .gitignore  AMADEUS_ARCHITECTURE.md  AMADEUS_CONTENT.md  CHANGELOG.md  Cargo.toml  README.md
amadeus-engine/: Cargo.toml
amadeus-engine/src/: api.rs  audio.rs  font.rs  lib.rs
amadeus-player/: Cargo.toml  cart.lua  config.json
amadeus-player/carts/: blocks.lua  eater.lua  flappy.lua  founder.lua  hedgecraft.lua  ib.lua  pong.lua  shooter.lua  snake.lua  trader.lua  uncharted.lua  vc.lua
amadeus-player/src/: main.rs
