[package]
name = "amadeus-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.9"
log = { workspace = true }
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
rodio = { version = "0.20", features = ["crossbeam-channel"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
